<resources>
    <string name="app_name">Scoring for the game erudite</string>
    <string name="button_to_start">Начать</string>
    <string name="button_settings">Настройки</string>
    <string name="entry_players_name">Введите имена игроков:</string>
    <string name="hint_player1">Игрок 1</string>
    <string name="hint_player2">Игрок 2</string>
    <string name="hint_player3">Игрок 3</string>
    <string name="hint_player4">Игрок 4</string>
    <string name="start_game">Начать игру</string>
    <string name="add_player">Добавить игрока</string>
    <string name="remove_player">Удалить игрока</string>
    <string name="player_turn">Ход игрока:</string>
    <string name="entry_word">Введите слово</string>
    <string name="select_multipliers">Выбрать множители</string>
    <string name="multipliers_word">Множитель слова:</string>
    <string name="multiplier_letter">Множитель букв:</string>
    <string name="_0">0</string>
    <string name="save">Сохранить</string>
    <string name="current_result">Текущие результаты:</string>
    <string name="next_turn">Следующий ход</string>
    <string name="to_end_game">Завершить игру</string>
    <string name="use_alphabet">Использовать алфавит:</string>
    <string name="alphabet_cyrillic">киррилица</string>
    <string name="set_color_background">Цвет фона:</string>
    <string name="BLACK">ЧЕРНЫЙ</string>
    <string name="WHITE">БЕЛЫЙ</string>
    <string name="YELLOW">ЖЕЛТЫЙ</string>
    <string name="ORANGE">ОРАНЖЕВЫЙ</string>
    <string name="GREEN">ЗЕЛЕНЫЙ</string>
    <string name="BLUE">СИНИЙ</string>
    <string name="button_save">СОХРАНИТЬ</string>
    <string name="button_to_menu">В МЕНЮ</string>

    <string-array name="select_multipliers">
        <item>X1</item>
        <item>X2</item>
        <item>X3</item>
    </string-array>
</resources>