<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGreen"
    tools:context=".view.EntryNameActivity">

    <TextView
        android:id="@+id/textViewEntryNamePlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entry_players_name"
        android:textSize="20sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEntryNamePlayer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_player1"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEntryNamePlayers" />

    <EditText
        android:id="@+id/editTextEntryNamePlayer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_player2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntryNamePlayer1" />

    <EditText
        android:id="@+id/editTextEntryNamePlayer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_player3"
        android:visibility="invisible"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntryNamePlayer2" />

    <EditText
        android:id="@+id/editTextEntryNamePlayer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_player4"
        android:visibility="invisible"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntryNamePlayer3" />

    <Button
        android:id="@+id/buttonToStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_margin="8dp"
        android:onClick="onClickStartGame"
        android:background="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeletePlayer" />

    <Button
        android:id="@+id/buttonAddPlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_player"
        android:layout_margin="8dp"
        android:onClick="onClickAddPlayer"
        android:background="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntryNamePlayer4" />

    <Button
        android:id="@+id/buttonDeletePlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_player"
        android:layout_margin="8dp"
        android:onClick="onClickDeletePlayer"
        android:background="@color/colorYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddPlayer" />
</androidx.constraintlayout.widget.ConstraintLayout>